--- a/src/views/noauth.hbs
+++ b/src/views/noauth.hbs
@@ -6,7 +6,7 @@
             <div class="col-8 ">
                 <div class="card clay1 text-white" style="border-radius: 1rem;">
                     <div class="card-body p-5 text-center black1">
-                        <h1>Verifique los datos ingresados</h1>
+                        <h1>No tiene permisos para ver esta página</h1>
                         <a href="/" class="btn btn-secondary">Volver</a>
                     </div>
                     
