--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -12,3 +12,30 @@ gradient-custom {
     body{
         font-family: 'Roboto';
     }
+
+    .gray500 {
+        color: #ced4da;
+    }
+
+    .clay1 {
+        /* color: rgba(25, 97, 233, 0.5); */
+        border-color: rgba(25, 97, 233, 0.5);
+    }
+
+    .clay2 {
+        background-color: rgba(13 , 202, 240, 0.5);
+    }
+
+    .black1 {
+        color: rgba(37, 37, 41, 0.8);
+    }
+
+    .black2 {
+        color: rgba(21, 21, 22, 0.7);
+    }
+
+    .black50 {
+        color: rgba(21, 21, 22, 0.7)
+    }
+
+    
